fix: get rid off highligting on touch (on mobile)

--- a/art-quiz/src/css/components/_button.scss
+++ b/art-quiz/src/css/components/_button.scss
@@ -18,6 +18,7 @@
   }
   cursor: pointer;
   transition: background-color 0.5s;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .button-white {
